Maquetacion seccion colores y funcionalidad. Se agrega probador de colores

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@ p {
     font-weight: '500';
 }
           </code></pre>
-          <a class="btn-show-moreless"><i class="fas fa-code"></i> <span>Ver Más</span></a> 
-          <a class="btn-copy-clipboard"><i class="far fa-clipboard"></i> Copiar</a>
+          <a class="btn-show-moreless wom-pink btn-a"><i class="fas fa-code"></i> <span>Ver Más</span></a> 
+          <a class="btn-copy-clipboard wom-pink btn-a"><i class="far fa-clipboard"></i> Copiar</a>
         </div>
         
 
@@ -63,31 +63,111 @@ p {
           <div class="code-section">
             <pre><code class="language-css">
 h1 { 
-  font-size: 16px;
+  font-size: 60px;
 }
 
 h2 { 
-  font-size: 16px;
+  font-size: 34px;
 }
 
-h3 { 
-  font-size: 16px;
+h6 { 
+  font-size: 1.125em;
 }
 
-h4 {
-  font-size: 16px;
+.bajada_descriptiva {
+  font-size: 30px;
+}
+
+p {
+  font-size: 0.875em;
+}
+
+.footer {
+  font-size: 0.813em;
 }
 
           </code></pre>
-          <a class="btn-show-moreless"><i class="fas fa-code"></i> <span>Ver Más</span></a>
-          <a class="btn-copy-clipboard"><i class="far fa-clipboard"></i> Copiar</a>
+          <a class="btn-show-moreless wom-pink btn-a"><i class="fas fa-code"></i> <span>Ver Más</span></a>
+          <a class="btn-copy-clipboard wom-pink btn-a"><i class="far fa-clipboard"></i> Copiar</a>
         </div>
         </article>
 
         <article id="colores">
           <h3>Colores</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum reprehenderit hic quia eius a velit necessitatibus veritatis, quae atque dignissimos quidem dolorem dolore, aperiam, placeat ratione ipsam adipisci quaerat ab. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius voluptates soluta iusto error voluptatum, quas fugiat cum accusamus alias vero non, corporis possimus nisi eaque qui ducimus nam officiis. Provident. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis porro inventore, vero natus assumenda laborum similique. Animi aliquid blanditiis praesentium ipsam, rerum, est quisquam alias. Eum quis, incidunt error unde!</p>
-          <div class="img-flex"><img src="sass/assets/img/colors1.jpg" alt="" class="img-responsive"> <img src="sass/assets/img/colors2.jpg" alt="" class="img-responsive"></div>
+          <div class="color-container" id="c-wom_light_purple">
+            <div class="color-box"></div>
+            <input type="text" value="#961397">
+            <a class="btn-copy-clipboard"><i class="far fa-clipboard"></i></a>
+          </div>
+          <div class="color-container" id="c-wom_purple">
+            <div class="color-box"></div>
+            <input type="text" value="#831383">
+            <a class="btn-copy-clipboard"><i class="far fa-clipboard"></i></a>
+          </div>
+
+          <div class="color-container" id="c-wom_dark_purple">
+            <div class="color-box"></div>
+            <input type="text" value="#4b0a5a">
+            <a class="btn-copy-clipboard"><i class="far fa-clipboard"></i></a>
+          </div>
+
+          <div class="color-container" id="c-wom_darkest_purple">
+            <div class="color-box"></div>
+            <input type="text" value="#2e0434">
+            <a class="btn-copy-clipboard"><i class="far fa-clipboard"></i></a>
+          </div>
+
+          <div class="color-container" id="c-wom_pink">
+            <div class="color-box"></div>
+            <input type="text" value="#fe0084">
+            <a class="btn-copy-clipboard"><i class="far fa-clipboard"></i></a>
+          </div>
+
+          <div class="color-container" id="c-wom_lightest_gray">
+            <div class="color-box"></div>
+            <input type="text" value="#f2f3f7">
+            <a class="btn-copy-clipboard"><i class="far fa-clipboard"></i></a>
+          </div>
+
+          <div class="color-container" id="c-wom_light_gray">
+            <div class="color-box"></div>
+            <input type="text" value="#e4e8eb">
+            <a class="btn-copy-clipboard"><i class="far fa-clipboard"></i></a>
+          </div>
+
+          <div class="color-container" id="c-wom_gray">
+            <div class="color-box"></div>
+            <input type="text" value="#d0d8de">
+            <a class="btn-copy-clipboard"><i class="far fa-clipboard"></i></a>
+          </div>
+
+          <div class="color-container" id="c-wom_medium_gray">
+            <div class="color-box"></div>
+            <input type="text" value="#8b9399">
+            <a class="btn-copy-clipboard"><i class="far fa-clipboard"></i></a>
+          </div>
+
+          <div class="color-container" id="c-wom_dark_gray">
+            <div class="color-box"></div>
+            <input type="text" value="#555b5e">
+            <a class="btn-copy-clipboard"><i class="far fa-clipboard"></i></a>
+          </div>
+
+
+
+
+          <div class="check-container">
+            <h6>Prueba un color:</h6>
+            <div class="color-container" id="check-color">
+              <div class="color-box"></div>
+              <input type="text" value="#cccccc"><input type="color" value="#cccccc">
+              <a class="btn-copy-clipboard"><i class="far fa-clipboard"></i></a>
+            </div>
+          </div>
+          
+
+          <!--<div class="img-flex"><img src="sass/assets/img/colors1.jpg" alt="" class="img-responsive"> <img src="sass/assets/img/colors2.jpg" alt="" class="img-responsive"></div>-->
         </article>
 
         <article id="navbar">
@@ -107,8 +187,8 @@ h4 {
 </header>
 </script>
           </code></pre>
-          <a class="btn-show-moreless"><i class="fas fa-code"></i> <span>Ver Más</span></a>
-          <a class="btn-copy-clipboard"><i class="far fa-clipboard"></i> Copiar</a>
+          <a class="btn-show-moreless wom-pink btn-a"><i class="fas fa-code"></i> <span>Ver Más</span></a>
+          <a class="btn-copy-clipboard wom-pink btn-a"><i class="far fa-clipboard"></i> Copiar</a>
           </div>
 
           <h5>NAVBAR CONSUME MOBILE</h5>
@@ -121,11 +201,11 @@ h4 {
           <div class="code-section">
             <pre><code class="language-markup">
               <script type="text/plain" class="language-markup">
-<h1>Hola</h1>
+<h1>Código</h1>
             </script>
           </code></pre>
-              <a class="btn-show-moreless"><i class="fas fa-code"></i> <span>Ver Más</span></a>
-              <a class="btn-copy-clipboard"><i class="far fa-clipboard"></i> Copiar</a>
+              <a class="btn-show-moreless wom-pink btn-a"><i class="fas fa-code"></i> <span>Ver Más</span></a>
+              <a class="btn-copy-clipboard wom-pink btn-a"><i class="far fa-clipboard"></i> Copiar</a>
           </div>
         </article>
         <article id="botones">
@@ -190,8 +270,8 @@ h4 {
             </script>
           </code></pre>
 
-          <a class="btn-show-moreless"><i class="fas fa-code"></i> <span>Ver Más</span></a>
-          <a class="btn-copy-clipboard"><i class="far fa-clipboard"></i> Copiar</a>
+          <a class="btn-show-moreless wom-pink btn-a"><i class="fas fa-code"></i> <span>Ver Más</span></a>
+          <a class="btn-copy-clipboard wom-pink btn-a"><i class="far fa-clipboard"></i> Copiar</a>
           </div>
 
           <p><img src="sass/assets/img/credenciales-mob.jpg" alt="" class="img-responsive img-flex"></p>
@@ -199,11 +279,11 @@ h4 {
           <div class="code-section">
             <pre><code class="language-markup">
               <script type="text/plain" class="language-markup">
-                <h1>Hola</h1>
+                <h1>Código</h1>
               </script>
           </code></pre>
-          <a class="btn-show-moreless"><i class="fas fa-code"></i> <span>Ver Más</span></a>
-          <a class="btn-copy-clipboard"><i class="far fa-clipboard"></i> Copiar</a>
+          <a class="btn-show-moreless wom-pink btn-a"><i class="fas fa-code"></i> <span>Ver Más</span></a>
+          <a class="btn-copy-clipboard wom-pink btn-a"><i class="far fa-clipboard"></i> Copiar</a>
           </div>
         </article>
     </main>
